--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -27,9 +27,9 @@
 width:40%;
 height: 3em;
 background-color: rgb(51, 163, 171);
-  display: flex;
-  justify-content: center;
+   display: flex;
   align-items: center;
+  justify-content: center;
   transition: o.5s;
   border-radius: 0.25em;
   cursor: pointer;
@@ -37,6 +37,8 @@ background-color: rgb(51, 163, 171);
   font-size: large;
   font-weight:700;
   font-family: 'Courier New', Courier, monospace;
+ 
+   margin:auto;
 }
 .login-btn:hover{
     transform: scale(1.25);
@@ -48,37 +50,37 @@ input{
     border:none;
     background-color: rgb(229,226,226);
     height: 4em;
-    width:80%;
+    width:70%;
     border-radius:0.25em;
     text-align: center;
      padding: 2em;
      font-size: large;
+     margin-left: 4em;
+     margin-bottom: 2em;
+    
 }
 input:focus{
     outline-color:black;
 }
-.hide{
-    position: absolute;
-    transform: scale(0);
+
+.reset-btn{
+    width:40%;
+height: 3em;
+background-color: rgb(209, 160, 0);
+   display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: o.5s;
+  border-radius: 0.25em;
+  cursor: pointer;
+  color:aliceblue;
+  font-size: large;
+  font-weight:700;
+  font-family: 'Courier New', Courier, monospace;
+ 
+   margin:auto;
 }
-.login-popup{
-    position: absolute;
-    height: 30em;
-    width: 30em;
-    display: flex;
-    flex-direction: column;
-     justify-content: center;
-     border-radius: 0.3em;
-     background-color: black;
-     color: white;
-     bottom: 0;
-     transition: 1.5s;
-     transform: scale(1);
-     
-     
-     
+.reset-button:hover{
+    transform: scale(1.25);
 }
-h3,p {
-    align-items: center;
-    justify-content: center;
-}
+
